--- a/Server/WCFServer/LocationWCF/Controls/ServerManagerBox.xaml
+++ b/Server/WCFServer/LocationWCF/Controls/ServerManagerBox.xaml
@@ -16,17 +16,35 @@
 
         </StackPanel>
 
-        <TabControl>
-            <TabItem Header="服务端日志">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="180"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <GroupBox >
+                <GroupBox.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <Label>服务端日志</Label>
+                        <Button Width="20" Name="BtnClearServerLogs" Click="BtnClearServerLogs_OnClick">X</Button>
+                    </StackPanel>
+                </GroupBox.Header>
                 <ScrollViewer>
-                    <TextBox Name="TbServerLog"></TextBox>
+                    <TextBox Name="TbServerLog" TextWrapping="Wrap"></TextBox>
                 </ScrollViewer>
-            </TabItem>
-            <TabItem Header="客户端消息">
+            </GroupBox>
+            <GroupBox Grid.Row="1">
+                <GroupBox.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <Label>客户端消息</Label>
+                        <Button Width="20" Name="BtnClearClientLogs" Click="BtnClearClientLogs_OnClick">X</Button>
+                    </StackPanel>
+                </GroupBox.Header>
                 <ScrollViewer>
-                    <TextBox Name="TbClientLog"></TextBox>
+                    <TextBox Name="TbClientLog" TextWrapping="Wrap"></TextBox>
                 </ScrollViewer>
-            </TabItem>
-        </TabControl>
+            </GroupBox>
+
+            <GridSplitter Grid.Row="1" Grid.Column="0" Height="0" VerticalAlignment="Top" HorizontalAlignment="Stretch"/>
+        </Grid>
     </DockPanel>
 </UserControl>
