--- a/Server/WCFServer/LocationWCF/MainWindow.xaml
+++ b/Server/WCFServer/LocationWCF/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationWCFServer"
         mc:Ignorable="d"
-        Title="服务端" Height="500" Width="800" Loaded="MainWindow_OnLoaded"  WindowStartupLocation="CenterScreen" Topmost="True">
+        Title="服务端" Height="500" Width="800" Loaded="MainWindow_OnLoaded"  WindowStartupLocation="CenterScreen"
+        Topmost="True">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="窗口">
