--- a/Server/WCFServer/LocationWCF/Controls/LogTextBox.xaml
+++ b/Server/WCFServer/LocationWCF/Controls/LogTextBox.xaml
@@ -6,7 +6,10 @@
              xmlns:local="clr-namespace:LocationServer.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Loaded="UserControl_Loaded" Unloaded="UserControl_Unloaded">
-    <Grid>
-        <TextBox Name="TbLog" TextWrapping="Wrap"></TextBox>
-    </Grid>
+    
+        <ScrollViewer>
+            <TextBox Name="TbLog" TextWrapping="Wrap"></TextBox>
+        </ScrollViewer>
+        
+    
 </UserControl>
