--- a/Server/WCFServer/LocationWCF/Windows/LocationHistoryWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/LocationHistoryWindow.xaml
@@ -7,11 +7,12 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="LocationHistoryWindow" Height="450" Width="1200" Loaded="LocationHistoryWindow_OnLoaded">
-    <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-            <!--<Button Name="BtnGetAll" Click="BtnGetAll_OnClick" Content="获取全部"></Button>-->
-            <Button Name="BtnGetAllActiveDay" Click="BtnGetAllActiveDay_OnClick" Content="获取统计数据"></Button>
-        </StackPanel>
+    <DockPanel >
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="获取统计数据" Name="MenuGetAllData" Click="MenuGetAllData_Click"></MenuItem>
+            <MenuItem Header="刷新数据" Name="MenuGetAllDataRefresh" Click="MenuGetAllDataRefresh_Click"></MenuItem>
+            <MenuItem Header="删除重复数据" Name="MenuRemoveRepeatData" Click="MenuRemoveRepeatData_Click"></MenuItem>
+        </Menu>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
             <Label>卡号</Label>
             <ComboBox Name="CbCardList" Width="100"></ComboBox>
@@ -27,7 +28,7 @@
             <xctk:TimePicker Width="100" Name="TpEnd"></xctk:TimePicker>
             <Button Name="BtnSearch" Click="BtnSearch_OnClick" Content="查询"></Button>
         </StackPanel>
-        <TextBox DockPanel.Dock="Bottom" Height="50" Name="TbLogs"></TextBox>
+        <TextBox DockPanel.Dock="Bottom" Height="70" Name="TbLogs"></TextBox>
             <TabControl>
             <TabItem Header="时间统计">
                 <DockPanel>
@@ -73,9 +74,9 @@
                     <DataGrid Name="DataGridAreaPosList"></DataGrid>
                 </DockPanel>
             </TabItem>
-            <TabItem Header="列表">
+            <!--<TabItem Header="列表">
                 <DataGrid Name="DataGridLocationHistory"></DataGrid>
-            </TabItem>
+            </TabItem>-->
         </TabControl>
 
     </DockPanel>
