--- a/LocationDaemon/MainWindow.xaml
+++ b/LocationDaemon/MainWindow.xaml
@@ -10,8 +10,12 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="配置" Name="MenuSetting" Click="MenuSetting_OnClick"></MenuItem>
         </Menu>
+        <ScrollViewer DockPanel.Dock="Bottom" Height="100">
+            <TextBox Name="TxtLog2" TextWrapping="Wrap"></TextBox>
+        </ScrollViewer>
         <ScrollViewer>
             <TextBox Name="TxtLog" TextWrapping="Wrap"></TextBox>
         </ScrollViewer>
+        
     </DockPanel>
 </Window>
