--- a/Server/WCFServer/LocationWCF/MainWindow.xaml
+++ b/Server/WCFServer/LocationWCF/MainWindow.xaml
@@ -24,6 +24,7 @@
                 <MenuItem Header="定位告警" Name="MenuLocationAlarms" Click="MenuLocationAlarms_OnClick"></MenuItem>
                 <Separator></Separator>
                 <MenuItem Header="选项" Name="MenuSetting" Click="MenuSetting_OnClick"></MenuItem>
+                <MenuItem Header="打开所在文件夹" Name="MenuOpenDir" Click="MenuOpenDir_OnClick"></MenuItem>
             </MenuItem>
             
             <MenuItem Header="工具">
@@ -53,6 +54,7 @@
                 <MenuItem Header="分离告警图片2" Name="MenuSaveCameraAlarmPicture2" Click="MenuSaveCameraAlarmPicture2_Click"></MenuItem>
                 <Separator></Separator>
                 <MenuItem Header="启动守护进程" Name="MenuStartDaemon" Click="MenuStartDaemon_OnClick"></MenuItem>
+                <MenuItem Header="更新历史统计缓存" Name="MenuRefreshHisPosBuffer" Click="MenuRefreshHisPosBuffer_OnClick"></MenuItem>
             </MenuItem>
             <MenuItem Header="同步"  Name="SyncAllData" Click="SyncAllData_Click">
             </MenuItem>
