--- a/Server/WCFServer/LocationWCF/Windows/LocationHistoryWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/LocationHistoryWindow.xaml
@@ -11,6 +11,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="获取统计数据" Name="MenuGetAllData" Click="MenuGetAllData_Click"></MenuItem>
             <MenuItem Header="刷新数据" Name="MenuGetAllDataRefresh" Click="MenuGetAllDataRefresh_Click"></MenuItem>
+            <MenuItem Header="分析数据" Name="MenuGetRepeatDataCount" Click="MenuGetRepeatDataCount_Click"></MenuItem>
             <MenuItem Header="清理数据" Name="MenuRemoveRepeatData" Click="MenuRemoveRepeatData_Click"></MenuItem>
         </Menu>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
