--- a/Server/WCFServer/LocationWCF/Windows/Simple/LocationAlarmWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/Simple/LocationAlarmWindow.xaml
@@ -8,8 +8,16 @@
         Title="LocationAlarmWindow" Height="400" Width="600"  WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
+            <MenuItem Header="实时告警" Name="MenuReal" Click="MenuReal_OnClick"></MenuItem>
+            <MenuItem Header="历史告警" Name="MenuHis" Click="MenuHis_OnClick"></MenuItem>
             <MenuItem Header="清空" Name="MenuClear" Click="MenuClear_OnClick"></MenuItem>
+            
         </Menu>
+        <StackPanel DockPanel.Dock="Top">
+           <TextBox Name="TbStart"></TextBox>
+            <TextBox Name="TbEnd"></TextBox>
+            <Button Content="查询" Name="BtnSearch" Click="BtnSearch_OnClick"></Button>
+        </StackPanel>
         <DataGrid Name="DataGrid1">
 
         </DataGrid>
