--- a/Server/WebSite/LocationWeb/Views/Home/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 @*<embed src="/api/areas/svg?Id=2" type="image/svg+xml" style="width:100%; height:100%" />*@
 
-<div id="showSvg"></div>
-<div id="canvas" style="width:1750px; height:864px"></div>
-
-<style type="text/css"> 
+@*<div id="showSvg"></div>
+<div id="canvas" style="width:1750px; height:864px"></div>*@
+<img src="~/Img/BaoXin/BaoXinHomePage.jpg" style="width:100%; height:100%;" />
+@*<style type="text/css"> 
     #showSvg{
         position:absolute;
     }
@@ -17,8 +17,8 @@
     footer{
         position:absolute; bottom:0px;
     }
-</style>
+</style>*@
 
-<script src="~/Scripts/jquery-1.10.2.js"></script>
-<script src="~/Scripts/echarts.js"></script>
-<script src="~/Scripts/position.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.js"></script>
+  <script src="~/Scripts/echarts.js"></script>
+  <script src="~/Scripts/position.js"></script>*@
