--- a/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
@@ -3,16 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - 定位管理系统</title>
+
+    <link rel="icon" href="~/Img/BaoXin/BaoXinLogo.ico" mce-href="~/Img/BaoXin/BaoXinLogo.ico" type="image/x-icon" >
+    <link rel="shortcut icon" href="~/Img/BaoXin/BaoXinLogo.ico" mce_href="~/Img/BaoXin/BaoXinLogo.ico" type="image/x-icon" >
+
+    <title>炼铁厂智慧化检修安全管理平台</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <style type="text/css">
+    @*<style type="text/css">
         body div.container {
-            margin: 0px 130px;
+            margin: 0px 220px;
             max-width: none;
         }
-    </style>
+    </style>*@
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -23,7 +27,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("定位管理系统", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <img src="~/Img/BaoXin/BaoXinLogo.png" style="height:50px; float:left;margin-left:15px; margin-right:10px;" />
+                @Html.ActionLink("炼铁厂智慧化检修安全管理平台", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "width:300px;color:#FFF" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -132,8 +137,8 @@
     <div class="container body-content">
         @RenderBody()
         <footer>
-            <hr style="width:1614px;" />
-            <p>&copy; @DateTime.Now.Year - 定位管理系统</p>
+            <hr />
+            <p>&copy; @DateTime.Now.Year - 炼铁厂智慧化检修安全管理平台</p>
         </footer>
     </div>
 
@@ -144,6 +149,5 @@
 
     <script src="~/Scripts/LocationSystem.js"></script>
     <script src="~/Scripts/protocolcheck.js"></script>
-    
 </body>
 </html>
