--- a/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
@@ -117,11 +117,11 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>
+                            @*<li>
                                 <a href="LocationSystem:" id="openExe">启动(管理)</a>
-                            </li>
+                            </li>*@
                             <li>
-                                <a href="LocationSystem:" id="openExe_guest">启动(一般)</a>
+                                <a href="LocationSystem:" id="openExe_guest">启动</a>
                             </li>
                             <li>
                                 <a id="downLoading">下载</a>
