线程无法停止问题

--- a/Server/WCFServer/LocationWCF/Windows/LocationHistoryWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/LocationHistoryWindow.xaml
@@ -23,6 +23,7 @@
                 <MenuItem Header="清理数据" Name="MenuRemoveRepeatData" Click="MenuRemoveRepeatData_Click"></MenuItem>
                 <MenuItem Header="删除误差点(当前)" Name="FindErrorPoints" Click="FindErrorPoints_Click"></MenuItem>
                 <MenuItem Header="删除误差点(当天)" Name="FindErrorPoints_Day" Click="FindErrorPoints_Day_Click"></MenuItem>
+                <MenuItem Header="删除误差点(全部)" Name="FindErrorPoints_All" Click="FindErrorPoints_All_Click"></MenuItem>
             </MenuItem>
         </Menu>
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
