--- a/Server/WCFServer/LocationWCF/App.xaml
+++ b/Server/WCFServer/LocationWCF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:LocationWCFServer"
-             StartupUri="MainWindow.xaml" Startup="App_OnStartup">
+             StartupUri="MainWindow.xaml" Startup="App_OnStartup" Exit="Application_Exit" >
     <Application.Resources>
          
     </Application.Resources>
